# WINC_OnePager

./: .gitignore  .ruff.toml  404.html  CITATION.cff  GaP_HIRES_15112022.py  INSTALLATION.md  README.md  index.html  mkdocs.yml  objects.inv  plot_well.py  pyproject.toml  requirements.txt  requirements.txt.frozen  requirements.txt.orig  requirements_prod.txt  requirements_pytest.txt
.devcontainer/: devcontainer.json
.github/workflow/: pytest.yaml
.github/workflows/: gh-pages.yaml  mkdocs.yaml  mkdocs_old.yaml  pytest.yaml  ruff.yaml
INSTALLATION/: index.html
PressCalc/: 1D_PresCalc.ipynb
WellClass/: README.md  plot_well_sample.ipynb  well_class.py
code_references/well_class/models/: index.html
code_references/well_class/well_class/: index.html
code_references/well_class/well_pressure/: index.html
docs/: gap.md  index.md  mkdocs.md  press_calc.md  well_class.md  well_viz.md
docs/code_references/: gap_geometry.md  grids.md  lgr_builder.md
docs/code_references/gap/: gap_carfin.md
docs/code_references/well_class/: models.md  well_class.md  well_pressure.md
experiments/: LGR.py  gap_pflotran.py  gap_wellclass.py  grid_coarse.py  grid_init.py  grid_refine.py  mesh_df.py  plot_utils.py  screen_workflow.py  well_df.py  well_pressure_tables.py  well_sketch.py  well_sketch_pressure.py
imgs/: Thumbs.db
main/: README.md
mkdocs/: index.html
notebooks/: GaP-WellClass.ipynb  GaP-WellClass2.ipynb  GaP-WellClass_test.ipynb  PVT_data.ipynb  Post_processing.ipynb  Pressure-WellClass-devsurvey.ipynb  Pressure-WellClass.ipynb  Pressure-WellClass_test.ipynb  Pressure.ipynb  WellClass-onepager.ipynb  WellClass_Xsections.ipynb  WellClass_csv_yaml.ipynb  flowchart  input_gradients_example.ipynb  lib2.ipynb  onepager.ipynb  pflotran_gap.ipynb  pflotran_gap_v2.ipynb  predict.txt  pvt_data_comparison.ipynb  winc_payload.json  winc_simple_verif.ipynb
notebooks/martin_linge/: Poretryksplott A-12 nytt RKB, 80 bar depletion in res, after cement log and updated barrier depths.xlsx  martin_linge_a12.ipynb
notebooks/olga_ref_runs/: Mixture_1.xlsx  Mixture_2.xlsx  PureCO2.xlsx
originals/: README.md
originals/GaP/: GaP_LWRES.py  README.md
originals/PressCalc/: PT_01012996  PT_010153  Readme.md
originals/WellClass/: GaP_input_Cosmo_v3.csv  GaP_input_Smeaheia_v3.csv  README.md  Simple_well.csv  plot_well_sample.ipynb  well_class_v2.py
originals/WellViz/: Readme.md
runscripts/: run_well_sketch.sh
search/: search_index.json
src/GaP/: README.md
src/GaP/data/smeaheia/: LEG_HIRES.grdecl.original  config.yaml
src/GaP/data/smeaheia_onepipe/: GEN_LGR_ONEPLUG_PH2_BD_V3.in  GEN_NOLGR.INIT  LEG_HIRES_BD_V1.grdecl.original  config.yaml
src/GaP/experiments/: GaP_HIRES.py  GaP_HIRES_15112022.py
src/GaP/libs/carfin/: CARFIN_barrier.py  CARFIN_builders.py  CARFIN_cement_bond.py  CARFIN_core.py  CARFIN_oph.py  CARFIN_pipe.py  CARFIN_pipe_with_oph.py  __init__.py  build_grdecl.py
src/GaP/libs/geometry/: LGR_grid.py  LGR_grid_utils.py  __init__.py  bbox_barrier.py  bbox_cement_bond.py  bbox_oph_sec.py  bbox_pipe.py  bbox_pipe_with_oph_sec.py  bbox_utils.py  init_grid3d.py
src/GaP/libs/models/: __init__.py  model_defaults.py  model_depth.py  model_file.py  model_gap.py  model_pipe_cement.py
src/GaP/libs/plotting/: __init__.py  plotters.py
src/GaP/notebooks/: demo.ipynb  smeaheia.yaml
src/PressCalc/: 1D_PresCalc.ipynb
src/WellClass/: README.md
src/WellClass/libs/grid_utils/: LGR.py  LGR2GaP.py  LGR_bbox.py  LGR_builder.py  LGR_builder_base.py  LGR_builder_old.py  LGR_grid_info.py  LGR_grid_utils.py  __init__.py  casings_cement.py  df2gap.py  df2gap_core.py  extract_grid_utils.py  grid_coarse.py  grid_lgr.py  grid_refine.py  grid_refine_base.py  well_casings_gap.py  well_df.py
src/WellClass/libs/models/: __init__.py  scalar_unit_model.py  well_model.py  well_model_utils.py
src/WellClass/libs/plotting/: __init__.py  plot_grids.py  plot_onepager.py  plot_pressure.py  plot_pt.py  plot_sketch.py  plot_sketch_pressure.py  plot_utils.py  plot_wellbore_elements.py
src/WellClass/libs/pvt/: pvt.py
src/WellClass/libs/utils/: LGR.py  LGR_bbox.py  __init__.py  compute_intersection.py  csv_parser.py  df2gap.py  fraction_float.py  yaml_parser.py
src/WellClass/libs/well_class/: __init__.py  well_class.py  well_raw.py  well_raw_validation.py
src/WellClass/libs/well_computed/: __init__.py  annulus.py  barrier_props.py  barriers_mod.py  barriers_names.py  borehole.py  borehole_HZH.py  borehole_old.py  casings_cement.py  cement_bond.py
src/WellClass/libs/well_pressure/: PVTDataManager.py  Pressure.py  PressureScenario.py  PressureScenarioManager.py  ScenarioParameters.py  WellConditions.py  _OLD_pressure.py  _OLD_pressure_scenario.py  __init__.py  barrier_pressure.py  co2_pressure.py  helper_func.py  (+6 more)
src/WellClass/notebooks/: Pressure.ipynb
src/WellClass/tools/: init_well_pressure.py
src/WellViz/: WellViz_Jan23_Dash_v4.py  WellViz_dash.py
src/originals/: GaP_TEST_GPB.ipynb  Simple_well.yaml  plot_well_sample.ipynb  plot_well_sample.py  pressure.txt
src/setup_grid/: BASE_GRD.grdecl  PFT_DECK.in  make_tops_dz.py
test_data/examples/cosmo/: GaP_input_Cosmo_v3.csv  cosmo.pkl  cosmo.yaml  cosmo_lgr_pytest.pkl
test_data/examples/frigg/: 25-1-10.json  GaP_input_Frigg_v3.csv  frigg_dev_survey.txt
test_data/examples/simple_well/: Simple_well.yaml
test_data/examples/smeaheia_v1/: GEN_NOLGR_PH2.EGRID  GEN_NOLGR_PH2.INIT  GaP_input_Smeaheia_v3.csv  smeaheia.yaml
test_data/examples/smeaheia_v2/: GaP_input_Smeaheia_v3.csv  smeaheia.pkl  smeaheia.yaml
test_data/examples/wildcat-pflotran/: wildcat.yaml
test_data/examples/winc/: gradients.json
test_data/pvt_constants/: temperature.txt
test_data/pvt_constants/mixture1/: metadata.json
test_data/pvt_constants/mixture2/: metadata.json
test_data/pvt_constants/pure_co2/: metadata.json
tests/: conftest.py  test_models.py  test_pressure.py  test_pvt.py  test_utils.py  test_well_computed.py
tests/gap/: conftest.py  test_bbox.py
tests/well_class/: conftest.py  test_well_class.py
well_class/: index.html
(+52 files in other folders)
