[project]
name = "WINC_OnePager"
version = "0.1.0"
description = "SCREEN: A tool to build legacy well representations on reservoir simulation grids"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "jsonpickle>=3.0.2,<4",
    "PyYAML>=6.0.1,<7",
    "pydantic>=2.5.2,<3",
    "numpy>=2.0.0",
    "pandas>2.2.2",
    "scipy>=1.11.2",
    "openpyxl>=3.1.5",
    "ruff>=0.5",
    "coolprop>=7.0.0",
]

[project.scripts]
get-pressure-tables = "experiments.well_pressure_tables:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "jupyterlab>=4.0.9,<5",
    "jupyter-dash>=0.4.2,<0.5",
    "ipympl>=0.9.3,<0.10",
    "ipykernel>=6.29.5,<7",
    "matplotlib==3.9",
]
docs = [
    "mkdocs>=1.5.3,<2",
    "mkdocstrings[python]>=0.24.0,<0.25",
    "mkdocs-material>=9.4.14,<10",
    "mkdocs-autorefs>=0.5.0,<0.6",
    "markdown-callouts>=0.3.0,<0.4",
]
test = ["pytest>=7.4.3,<8", "pytest-cov>=4.1.0,<5", "ruff>=0.5"]
dash = [
    "dash>=2.14.1,<3",
    "pyarrow>=14.0.1,<15",
    "fastparquet>=2023.10.1,<2024",
]

[tool.uv]
default-groups = ["dev", "docs", "test", "dash"]

[tool.hatch.build.targets.sdist]
include = [
    "src/WellClass",
    "src/WellClass/libs/pvt/pvt_constants/**/*.txt",
    "src/WellClass/libs/pvt/pvt_constants/**/*.json",
    "src/WellClass/libs/pvt/pvt_constants*.txt",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/WellClass",
    "src/WellClass/libs/pvt/pvt_constants/**/*.txt",
    "src/WellClass/libs/pvt/pvt_constants/**/*.json",
    "src/WellClass/libs/pvt/pvt_constants*.txt",
]

[tool.hatch.build.targets.wheel.sources]
"src/WellClass" = "WellClass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
