[project]
name = "WINC_OnePager"
version = "0.1.0"
description = "WINC_OnePager: Analytical wellbore pressure estimation for CO2 leakage risk assessment"
authors = [{ name = "Alejandro Bello", email = "gpb@equinor.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
    "jsonpickle>=3.0.2,<4",
    "PyYAML>=6.0.1,<7",
    "pydantic>=2.5.2,<3",
    "numpy>=2.0.0",
    "pandas>2.2.2",
    "scipy>=1.11.2",
    "openpyxl>=3.1.5",
    "ruff>=0.5",
    "coolprop>=7.0.0",
]

[project.scripts]
get-pressure-tables = "experiments.well_pressure_tables:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "jupyterlab>=4.0.9,<5",
    "jupyter-dash>=0.4.2,<0.5",
    "ipympl>=0.9.3,<0.10",
    "ipykernel>=6.29.5,<7",
    "matplotlib==3.9",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocstrings[python]>=0.27",
    "mkdocs-material>=9.5,<10",
    "mkdocs-autorefs>=1.0",
    "markdown-callouts>=0.4",
]
test = ["pytest>=7.4.3,<8", "pytest-cov>=4.1.0,<5", "ruff>=0.5"]
dash = ["dash>=2.14.1,<3", "pyarrow>=17.0.0", "fastparquet>=2024.0.0"]

[tool.uv]
default-groups = ["dev", "docs", "test", "dash"]

[tool.hatch.build.targets.sdist]
include = [
    "src/WellClass",
    "src/WellClass/libs/pvt/pvt_constants/**/*.txt",
    "src/WellClass/libs/pvt/pvt_constants/**/*.json",
    "src/WellClass/libs/pvt/pvt_constants*.txt",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/WellClass",
    "src/WellClass/libs/pvt/pvt_constants/**/*.txt",
    "src/WellClass/libs/pvt/pvt_constants/**/*.json",
    "src/WellClass/libs/pvt/pvt_constants*.txt",
]

[tool.hatch.build.targets.wheel.sources]
"src/WellClass" = "WellClass"

[tool.pytest.ini_options]
addopts = ["--color=yes", "-vv"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 150
exclude = [
    "build",
    "dist",
    "site",
    "venv_screen",
    "originals",
    "test_data",
    "**/*.ipynb",
    "GaP_HIRES.py",
    "GaP_HIRES_15112022.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts (required when using ruff format) ---
    "W191",   # tab indentation
    "E111",   # indentation not a multiple of N
    "E114",   # indentation not a multiple of N (comment)
    "E117",   # over-indented
    "D206",   # docstring indent
    "D300",   # triple-single-quotes
    "Q",      # flake8-quotes (all)
    "COM812", # trailing comma missing
    "COM819", # trailing comma prohibited
    "E501",   # line length (handled by formatter)
    # --- Intentional style choices ---
    "FIX",    # flake8-fixme (allow TODO/FIXME comments)
    "FBT",    # flake8-boolean-trap (domain readability)
    "TD",     # flake8-todos
    "TRY003", # long messages in exception constructors
    "TRY300", # try-except-else style
    "EM",     # flake8-errmsg (inline error strings OK)
    "G003",   # string concatenation in logging
    "G004",   # f-strings in logging
    # --- Docstring rules (relaxed) ---
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "D200", # docstring should fit on one line
    "D203", # incompatible with D211
    "D205", # 1 blank line required between summary and description
    "D212", # incompatible with D213
    "D400", # docstring first line should end with period
    "D401", # docstring imperative mood
    "D404", # docstring first word
    "D415", # docstring first line should end with punctuation
    "D417", # missing argument description in docstring
    # --- Domain naming conventions (P, T, MSAD, etc.) ---
    "N802", # function name should be lowercase
    "N803", # argument name should be lowercase
    "N805", # first argument should be self
    "N806", # variable in function should be lowercase
    "N815", # mixed-case variable in class scope
    "N999", # invalid module name
    # --- Complexity (relaxed) ---
    "C901",    # too complex
    "PLR0912", # too many branches
    "PLR0913", # too many arguments (handled by pylint.max-args)
    "PLR0915", # too many statements
    "PLR2004", # magic value in comparison
    # --- Code patterns (accepted in codebase) ---
    "ERA001",  # commented-out code
    "TID252",  # relative imports from parent modules
    "INP001",  # implicit namespace package
    "SIM108",  # use ternary operator (readability preference)
    "SIM102",  # collapsible if
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
    "PLW2901", # overwritten loop variable
    "PLW0133", # useless exception statement
    "B007",    # unused loop variable
    "B028",    # no stacklevel in warnings.warn
    "RUF059",  # unused unpacked variable
    "ISC002",  # implicit string concat
    "PD002",   # use of .values on DataFrame
    "PERF102", # incorrect key check on dict
    "PERF401", # use list comprehension
    "C405",    # unnecessary literal set
    "C408",    # unnecessary dict call
    "PT018",   # composite assertion
    # --- Security (review separately) ---
    "S101", # use of assert (used for validation)
    "S301", # pickle usage
    "S307", # eval() usage
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "ANN", "SLF001"]
"__init__.py" = ["F401"]
"experiments/**" = ["ANN"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
